TCF Core: fixed FindBugs warnings